Define "CharsAreAllUnique" interface